Added POPL PC membership.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
+                  
+                  <abbr>POPL</abbr>&nbsp;’19
+                  
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs">
                   <a href="https://secdev.ieee.org/2018/">
                   <abbr>SecDev</abbr>&nbsp;’18
                   </a>
@@ -575,7 +585,7 @@
                   <a href="https://github.com/michael-emmi/printlncs">printlncs</a>
                 </span>
               </div>
-              <div class="info">save paper by printing every two pages of <abbr><abbr>LNCS</abbr></abbr> proceedings on a single page, without scaling.
+              <div class="info">save paper by printing every two pages of <abbr>LNCS</abbr> proceedings on a single page, without scaling.
 </div>
             </div>
         </section>
