--- a/publications.html
+++ b/publications.html
@@ -47,10 +47,10 @@
           <li class="item">
             Michael Emmi and Constantin Enea.
             <span class="article-title">
-                Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections.
+                <a href="http://doi.acm.org/10.1145/3158113">Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections</a>.
             </span>
             In <span class="article-volume">Proc. 45th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
-            (<abbr>POPL</abbr>&nbsp;’18).
+            (<abbr>POPL</abbr>&nbsp;’18), pages 25:1–25:27.
             <abbr>ACM</abbr>, 2018.
             <span class="screen-only">(<a href="papers/conf-popl-EmmiE18.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
