--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -141,6 +141,11 @@ New York, <abbr>NY</abbr> 10165<br>
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="">46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</a></span>
+          (<abbr>POPL</abbr>&nbsp;’19).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://secdev.ieee.org/2018/">3rd IEEE Secure Development Conference</a></span>
           (<abbr>SecDev</abbr>&nbsp;’18).
         </div>
@@ -191,12 +196,12 @@ New York, <abbr>NY</abbr> 10165<br>
         </div>
         <div class="item">
           <span class="article-title">External Review Committee</span>.
-          <span class="article-volume"><a href="http://conf.researchr.org/home/POPL-2016">43rd <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a></span>
+          <span class="article-volume"><a href="http://conf.researchr.org/home/POPL-2016">43rd <abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr> Symposium on Principles of Programming Languages</a></span>
           (<abbr>POPL</abbr>&nbsp;’16).
         </div>
         <div class="item">
           <span class="article-title">External Review Committee</span>.
-          <span class="article-volume"><a href="https://ppopp15.soe.ucsc.edu">21st <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr></abbr> Symposium on Principles and Practice of Parallel Programming</a></span>
+          <span class="article-volume"><a href="https://ppopp15.soe.ucsc.edu">21st <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles and Practice of Parallel Programming</a></span>
           (<abbr>PPoPP</abbr>&nbsp;’16).
         </div>
         <div class="item">
@@ -206,7 +211,7 @@ New York, <abbr>NY</abbr> 10165<br>
         </div>
         <div class="item">
           <span class="article-title">External Review Committee</span>.
-          <span class="article-volume"><a href="http://popl.mpi-sws.org/2015/">42nd <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a></span>
+          <span class="article-volume"><a href="http://popl.mpi-sws.org/2015/">42nd <abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr> Symposium on Principles of Programming Languages</a></span>
           (<abbr>POPL</abbr>&nbsp;’15).
         </div>
         <div class="item">
@@ -221,12 +226,12 @@ New York, <abbr>NY</abbr> 10165<br>
         </div>
         <div class="item">
           <span class="article-title">External Review Committee</span>.
-          <span class="article-volume"><a href="http://conferences.inf.ed.ac.uk/pldi2014/">35th annual <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr></abbr> Conference on Programming Language Design and Implementation</a></span>
+          <span class="article-volume"><a href="http://conferences.inf.ed.ac.uk/pldi2014/">35th annual <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Conference on Programming Language Design and Implementation</a></span>
           (<abbr>PLDI</abbr>&nbsp;’14).
         </div>
         <div class="item">
           <span class="article-title">External Review Committee</span>.
-          <span class="article-volume"><a href="http://popl.mpi-sws.org/2013/">40th <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a></span>
+          <span class="article-volume"><a href="http://popl.mpi-sws.org/2013/">40th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr> Symposium on Principles of Programming Languages</a></span>
           (<abbr>POPL</abbr>&nbsp;’13).
         </div>
         <div class="item">
@@ -269,7 +274,7 @@ New York, <abbr>NY</abbr> 10165<br>
         </div>
         <div class="item">
           <span class="article-title"><a href="https://github.com/michael-emmi/printlncs">printlncs</a></span>,
-          save paper by printing every two pages of <abbr><abbr>LNCS</abbr></abbr> proceedings on a single page, without scaling.
+          save paper by printing every two pages of <abbr>LNCS</abbr> proceedings on a single page, without scaling.
 
           <span class="print-only"><a href="https://github.com/michael-emmi/printlncs">https://github.com/michael-emmi/printlncs</a></span>
         </div>
