--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
+                  <a href="http://easychair.org/smart-program/LPAR-22/">
+                  <abbr>LPAR</abbr>-22
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs">
                   <a href="https://secdev.ieee.org/2018/">
                   <abbr>SecDev</abbr>&nbsp;’18
                   </a>
