--- a/cv.html
+++ b/cv.html
@@ -146,6 +146,11 @@ New York, <abbr>NY</abbr> 10165<br>
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="http://easychair.org/smart-program/LPAR-22/">22nd International Conference on Logic for Programming Artificial Intelligence and Reasoning</a></span>
+          (<abbr>LPAR</abbr>-22).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://secdev.ieee.org/2018/">3rd IEEE Secure Development Conference</a></span>
           (<abbr>SecDev</abbr>&nbsp;’18).
         </div>
