Added CAV paper.

--- a/index.html
+++ b/index.html
@@ -266,6 +266,14 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a>Monitoring Weak Consistency</a>
+                </span>
+                <span class="rhs"><abbr>CAV</abbr>&nbsp;’18</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a href="papers/conf-popl-EmmiE18.pdf">Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections</a>
                 </span>
                 <span class="rhs"><abbr>POPL</abbr>&nbsp;’18</span>
