--- a/publications.html
+++ b/publications.html
@@ -47,6 +47,16 @@
           <li class="item">
             Michael Emmi and Constantin Enea.
             <span class="article-title">
+                Monitoring Weak Consistency.
+            </span>
+            In <span class="article-volume">Proc. 30th International Conference on Computer Aided Verification</span>
+            (<abbr>CAV</abbr>&nbsp;’18).
+            <abbr>LNCS</abbr>, 2018.
+            
+          </li>
+          <li class="item">
+            Michael Emmi and Constantin Enea.
+            <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/3158113">Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections</a>.
             </span>
             In <span class="article-volume">Proc. 45th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
