--- a/cv.html
+++ b/cv.html
@@ -256,6 +256,16 @@ New York, <abbr>NY</abbr> 10165<br>
         <div class="item">
           Michael Emmi and Constantin Enea.
           <span class="article-title">
+              Monitoring Weak Consistency.
+          </span>
+            In <span class="article-volume">Proc. 30th International Conference on Computer Aided Verification</span>
+            (<abbr>CAV</abbr>&nbsp;’18).
+            <abbr>LNCS</abbr>, 2018.
+          
+        </div>
+        <div class="item">
+          Michael Emmi and Constantin Enea.
+          <span class="article-title">
               <a href="http://doi.acm.org/10.1145/3158113">Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections</a>.
           </span>
             In <span class="article-volume">Proc. 45th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
