--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
-                  <a href="https://secdev.ieee.org/2018/">
-                  <abbr>SecDev</abbr>&nbsp;’18
+                  <a href="https://www.irif.fr/~cenea/yr-concur2018/">
+                  <abbr>YR-CONCUR</abbr>&nbsp;’18
                   </a>
                 </span>
               </div>
