--- a/cv.html
+++ b/cv.html
@@ -151,8 +151,8 @@ New York, <abbr>NY</abbr> 10165<br>
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume"><a href="https://secdev.ieee.org/2018/">3rd IEEE Secure Development Conference</a></span>
-          (<abbr>SecDev</abbr>&nbsp;’18).
+          <span class="article-volume"><a href="https://www.irif.fr/~cenea/yr-concur2018/">8th Young Researchers Workshop on Concurrency Theory</a></span>
+          (<abbr>YR-CONCUR</abbr>&nbsp;’18).
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
