Added SecDev activity.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -156,6 +156,11 @@ New York, <abbr>NY</abbr> 10165<br>
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="http://secdev.ieee.org/2018/home">IEEE Cybersecurity Development Conference</a></span>
+          (<abbr>SecDev</abbr>&nbsp;’18).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://netys.net">6th International Conference on Networked Systems</a></span>
           (<abbr>NETYS</abbr>&nbsp;’18).
         </div>
