Added upcoming activity.

--- a/cv.html
+++ b/cv.html
@@ -141,6 +141,11 @@ New York, <abbr>NY</abbr> 10165<br>
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume">40th annual <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> conference on Programming Language Design and Implementation</span>
+          (<abbr>PLDI</abbr>&nbsp;’19).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume">46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
           (<abbr>POPL</abbr>&nbsp;’19).
         </div>
