Added SideTrail paper.

--- a/cv.html
+++ b/cv.html
@@ -264,6 +264,16 @@ New York, <abbr>NY</abbr> 10165<br>
     <section id="publications">
       <h2>Publications</h2>
         <div class="item">
+          Konstantinos Athanasiou, Byron Cook, Michael Emmi, Colm MacCarthaigh, Daniel Schwartz-Narbonne and Serdar Tasiran.
+          <span class="article-title">
+              SideTrail: Verifying Time-Balancing of Cryptosystems.
+          </span>
+            In <span class="article-volume">Proc. 10th Working Conference on Verified Software: Theories, Tools, and Experiments</span>
+            (<abbr>VSTTE</abbr>&nbsp;’18).
+            <abbr>LNCS</abbr>, 2018.
+          
+        </div>
+        <div class="item">
           Michael Emmi and Constantin Enea.
           <span class="article-title">
               Monitoring Weak Consistency.
