--- a/index.html
+++ b/index.html
@@ -286,6 +286,14 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a>SideTrail: Verifying Time-Balancing of Cryptosystems</a>
+                </span>
+                <span class="rhs"><abbr>VSTTE</abbr>&nbsp;’18</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a>Monitoring Weak Consistency</a>
                 </span>
                 <span class="rhs"><abbr>CAV</abbr>&nbsp;’18</span>
