--- a/publications.html
+++ b/publications.html
@@ -45,6 +45,16 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Konstantinos Athanasiou, Byron Cook, Michael Emmi, Colm MacCarthaigh, Daniel Schwartz-Narbonne and Serdar Tasiran.
+            <span class="article-title">
+                SideTrail: Verifying Time-Balancing of Cryptosystems.
+            </span>
+            In <span class="article-volume">Proc. 10th Working Conference on Verified Software: Theories, Tools, and Experiments</span>
+            (<abbr>VSTTE</abbr>&nbsp;’18).
+            <abbr>LNCS</abbr>, 2018.
+            
+          </li>
+          <li class="item">
             Michael Emmi and Constantin Enea.
             <span class="article-title">
                 Monitoring Weak Consistency.
