Added invited talks.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -153,9 +153,24 @@ New York, <abbr>NY</abbr> 10165<br>
           (<abbr>LPAR</abbr>-22).
         </div>
         <div class="item">
+          <span class="article-title">Invited Talk</span>.
+          <span class="article-volume"><a href="http://avocs18.irisa.fr">18th International Workshop on Automated Verification of Critical Systems</a></span>
+          (AVoCS&nbsp;’18).
+        </div>
+        <div class="item">
+          <span class="article-title">Invited Talk</span>.
+          <span class="article-volume"><a href="http://forsyte.at/events/frida2018/">The 5th Workshop on Formal Reasoning in Distributed Algorithms</a></span>
+          (FRIDA&nbsp;’18).
+        </div>
+        <div class="item">
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://www.irif.fr/~cenea/yr-concur2018/">8th Young Researchers Workshop on Concurrency Theory</a></span>
           (<abbr>YR-CONCUR</abbr>&nbsp;’18).
+        </div>
+        <div class="item">
+          <span class="article-title">Invited Talk</span>.
+          <span class="article-volume"><a href="http://www.cs.princeton.edu/~grigoryf/vsse_program.html">Workshop on Verification and Synthesis for Software Evolution</a></span>
+          (VSSE&nbsp;’18).
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
@@ -178,6 +193,11 @@ New York, <abbr>NY</abbr> 10165<br>
           (<abbr>TAPAS</abbr>&nbsp;’17).
         </div>
         <div class="item">
+          <span class="article-title">Contributed Talk</span>.
+          <span class="article-volume"><a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=8106">IBM Programming Languages Day</a></span>
+          (PL&nbsp;Day&nbsp;’17).
+        </div>
+        <div class="item">
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://cavconference.org/2017/">29th International Conference on Computer-Aided Verification</a></span>
           (<abbr>CAV</abbr>&nbsp;’17).
@@ -191,6 +211,16 @@ New York, <abbr>NY</abbr> 10165<br>
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://www.etaps.org/index.php/2017/fossacs">20th International Conference on Foundations of Software Science and Computation Structures</a></span>
           (<abbr>FoSSaCS</abbr>&nbsp;’17).
+        </div>
+        <div class="item">
+          <span class="article-title">Contributed Talk</span>.
+          <span class="article-volume"><a href="http://www.njpls.org/sep16.html">NJ Programming Languages and Systems Seminar</a></span>
+          (NJPLS&nbsp;’16).
+        </div>
+        <div class="item">
+          <span class="article-title">Invited Talk</span>.
+          <span class="article-volume"><a href="https://conf.researchr.org/track/pldi-2016/FMS-2016-papers">Workshop on Formal Methods and Security</a></span>
+          (FMS&nbsp;’16).
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
@@ -226,6 +256,11 @@ New York, <abbr>NY</abbr> 10165<br>
           <span class="article-title">External Review Committee</span>.
           <span class="article-volume"><a href="http://popl.mpi-sws.org/2015/">42nd <abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr> Symposium on Principles of Programming Languages</a></span>
           (<abbr>POPL</abbr>&nbsp;’15).
+        </div>
+        <div class="item">
+          <span class="article-title">Invited Talk</span>.
+          <span class="article-volume"><a href="http://netys.net/history/netys2015/workshops/index.html">2nd Workshop on The Chemistry of Concurrent and Distributed Programming</a></span>
+          (CCDP&nbsp;’15).
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
