--- a/index.html
+++ b/index.html
@@ -67,10 +67,40 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">Invited Talk</span>
+                <span class="rhs">
+                  <a href="http://avocs18.irisa.fr">
+                  AVoCS&nbsp;’18
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Invited Talk</span>
+                <span class="rhs">
+                  <a href="http://forsyte.at/events/frida2018/">
+                  FRIDA&nbsp;’18
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
                   <a href="https://www.irif.fr/~cenea/yr-concur2018/">
                   <abbr>YR-CONCUR</abbr>&nbsp;’18
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Invited Talk</span>
+                <span class="rhs">
+                  <a href="http://www.cs.princeton.edu/~grigoryf/vsse_program.html">
+                  VSSE&nbsp;’18
                   </a>
                 </span>
               </div>
@@ -117,6 +147,16 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">Contributed Talk</span>
+                <span class="rhs">
+                  <a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=8106">
+                  PL&nbsp;Day&nbsp;’17
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
                   <a href="http://cavconference.org/2017/">
@@ -141,6 +181,26 @@
                 <span class="rhs">
                   <a href="http://www.etaps.org/index.php/2017/fossacs">
                   <abbr>FoSSaCS</abbr>&nbsp;’17
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Contributed Talk</span>
+                <span class="rhs">
+                  <a href="http://www.njpls.org/sep16.html">
+                  NJPLS&nbsp;’16
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Invited Talk</span>
+                <span class="rhs">
+                  <a href="https://conf.researchr.org/track/pldi-2016/FMS-2016-papers">
+                  FMS&nbsp;’16
                   </a>
                 </span>
               </div>
@@ -211,6 +271,16 @@
                 <span class="rhs">
                   <a href="http://popl.mpi-sws.org/2015/">
                   <abbr>POPL</abbr>&nbsp;’15
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Invited Talk</span>
+                <span class="rhs">
+                  <a href="http://netys.net/history/netys2015/workshops/index.html">
+                  CCDP&nbsp;’15
                   </a>
                 </span>
               </div>
