Added paper, updated links.

--- a/publications.html
+++ b/publications.html
@@ -64,6 +64,16 @@
             
           </li>
           <li class="item">
+            Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Jad Hamza.
+            <span class="article-title">
+                <a href="https://doi.org/10.1016/j.ic.2018.02.014">On Reducing Linearizability to State Reachability</a>.
+            </span>
+            In <span class="article-volume">Information and Computation</span>
+            (<abbr>I&C</abbr>&nbsp;’18), volume 261, pages 383–400.
+            <abbr>Springer</abbr>, 2018.
+            <span class="screen-only">(<a href="papers/journals-iandc-BouajjaniEEH18.pdf"><abbr>PDF</abbr></a>)</span>
+          </li>
+          <li class="item">
             Michael Emmi and Constantin Enea.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/3158113">Sound, Complete, and Tractable Linearizability Monitoring for Concurrent Collections</a>.
