--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -139,12 +139,12 @@ New York, <abbr>NY</abbr> 10165<br>
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume"><a href="">40th annual <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> conference on Programming Language Design and Implementation</a></span>
+          <span class="article-volume"><a href="https://conf.researchr.org/home/pldi-2019">40th annual <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> conference on Programming Language Design and Implementation</a></span>
           (<abbr>PLDI</abbr>&nbsp;’19).
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume"><a href="">46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</a></span>
+          <span class="article-volume"><a href="https://popl19.sigplan.org">46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</a></span>
           (<abbr>POPL</abbr>&nbsp;’19).
         </div>
         <div class="item">
