--- a/cv.html
+++ b/cv.html
@@ -139,12 +139,12 @@ New York, <abbr>NY</abbr> 10165<br>
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume">40th annual <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> conference on Programming Language Design and Implementation</span>
+          <span class="article-volume"><a href="https://conf.researchr.org/home/pldi-2019">40th annual <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> conference on Programming Language Design and Implementation</a></span>
           (<abbr>PLDI</abbr>&nbsp;’19).
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume">46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
+          <span class="article-volume"><a href="https://popl19.sigplan.org">46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</a></span>
           (<abbr>POPL</abbr>&nbsp;’19).
         </div>
         <div class="item">
@@ -315,6 +315,16 @@ New York, <abbr>NY</abbr> 10165<br>
             (<abbr>CAV</abbr>&nbsp;’18).
             <abbr>LNCS</abbr>, 2018.
           
+        </div>
+        <div class="item">
+          Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Jad Hamza.
+          <span class="article-title">
+              <a href="https://doi.org/10.1016/j.ic.2018.02.014">On Reducing Linearizability to State Reachability</a>.
+          </span>
+            In <span class="article-volume">Information and Computation</span>
+            (<abbr>I&C</abbr>&nbsp;’18), volume 261, pages 383–400.
+            <abbr>Springer</abbr>, 2018.
+          <span class="screen-only">(<a href="papers/journals-iandc-BouajjaniEEH18.pdf"><abbr>PDF</abbr></a>)</span>
         </div>
         <div class="item">
           Michael Emmi and Constantin Enea.
