Added new CAV paper.

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Monitoring Weak Consistency</a>
+                    <a href="papers/conf-cav-EmmiE18.pdf">Monitoring Weak Consistency</a>
                 </span>
                 <span class="rhs"><abbr>CAV</abbr>&nbsp;’18</span>
               </div>
