--- a/publications.html
+++ b/publications.html
@@ -56,12 +56,12 @@
           <li class="item">
             Michael Emmi and Constantin Enea.
             <span class="article-title">
-                Monitoring Weak Consistency.
+                <a href="https://doi.org/10.1007/978-3-319-96145-3_26">Monitoring Weak Consistency</a>.
             </span>
             In <span class="article-volume">Proc. 30th International Conference on Computer Aided Verification</span>
-            (<abbr>CAV</abbr>&nbsp;’18).
-            <abbr>LNCS</abbr>, 2018.
-            
+            (<abbr>CAV</abbr>&nbsp;’18), <abbr>LNCS</abbr>, volume 10981, pages 487–506.
+            <abbr>Springer</abbr>, 2018.
+            <span class="screen-only">(<a href="papers/conf-cav-EmmiE18.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
           <li class="item">
             Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Jad Hamza.
