Added accepted paper.

--- a/cv.html
+++ b/cv.html
@@ -297,6 +297,16 @@ New York, <abbr>NY</abbr> 10165<br>
     <section id="publications">
       <h2>Publications</h2>
         <div class="item">
+          Michael Emmi and Constantin Enea.
+          <span class="article-title">
+              Weak-Consistency Specification via Visibility Relaxation.
+          </span>
+            In <span class="article-volume">Proc. 46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
+            (<abbr>POPL</abbr>&nbsp;’19).
+            <abbr>ACM</abbr>, 2019.
+          
+        </div>
+        <div class="item">
           Konstantinos Athanasiou, Byron Cook, Michael Emmi, Colm MacCarthaigh, Daniel Schwartz-Narbonne and Serdar Tasiran.
           <span class="article-title">
               SideTrail: Verifying Time-Balancing of Cryptosystems.
