--- a/index.html
+++ b/index.html
@@ -355,6 +355,14 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a>Weak-Consistency Specification via Visibility Relaxation</a>
+                </span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’19</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a>SideTrail: Verifying Time-Balancing of Cryptosystems</a>
                 </span>
                 <span class="rhs"><abbr>VSTTE</abbr>&nbsp;’18</span>
