--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,16 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Michael Emmi and Constantin Enea.
+            <span class="article-title">
+                Weak-Consistency Specification via Visibility Relaxation.
+            </span>
+            In <span class="article-volume">Proc. 46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
+            (<abbr>POPL</abbr>&nbsp;’19).
+            <abbr>ACM</abbr>, 2019.
+            
+          </li>
+          <li class="item">
             Konstantinos Athanasiou, Byron Cook, Michael Emmi, Colm MacCarthaigh, Daniel Schwartz-Narbonne and Serdar Tasiran.
             <span class="article-title">
                 SideTrail: Verifying Time-Balancing of Cryptosystems.
