--- a/publications.html
+++ b/publications.html
@@ -56,11 +56,11 @@
           <li class="item">
             Konstantinos Athanasiou, Byron Cook, Michael Emmi, Colm MacCarthaigh, Daniel Schwartz-Narbonne and Serdar Tasiran.
             <span class="article-title">
-                SideTrail: Verifying Time-Balancing of Cryptosystems.
+                <a href="https://doi.org/10.1007/978-3-030-03592-1_12">SideTrail: Verifying Time-Balancing of Cryptosystems</a>.
             </span>
             In <span class="article-volume">Proc. 10th Working Conference on Verified Software: Theories, Tools, and Experiments</span>
-            (<abbr>VSTTE</abbr>&nbsp;’18).
-            <abbr>LNCS</abbr>, 2018.
+            (<abbr>VSTTE</abbr>&nbsp;’18), <abbr>LNCS</abbr>, volume 11294, pages 215–228.
+            Springer, 2018.
             
           </li>
           <li class="item">
@@ -70,7 +70,7 @@
             </span>
             In <span class="article-volume">Proc. 30th International Conference on Computer Aided Verification</span>
             (<abbr>CAV</abbr>&nbsp;’18), <abbr>LNCS</abbr>, volume 10981, pages 487–506.
-            <abbr>Springer</abbr>, 2018.
+            Springer, 2018.
             <span class="screen-only">(<a href="papers/conf-cav-EmmiE18.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
           <li class="item">
@@ -80,7 +80,7 @@
             </span>
             In <span class="article-volume">Information and Computation</span>
             (<abbr>I&C</abbr>&nbsp;’18), volume 261, pages 383–400.
-            <abbr>Springer</abbr>, 2018.
+            Elsevier, 2018.
             <span class="screen-only">(<a href="papers/journals-iandc-BouajjaniEEH18.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
           <li class="item">
