Added PL day talk.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -148,6 +148,11 @@ New York, <abbr>NY</abbr> 10165<br>
           (<abbr>POPL</abbr>&nbsp;’19).
         </div>
         <div class="item">
+          <span class="article-title">Contributed Talk</span>.
+          <span class="article-volume"><a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">IBM Programming Languages Day</a></span>
+          (PL&nbsp;Day&nbsp;’18).
+        </div>
+        <div class="item">
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://easychair.org/smart-program/LPAR-22/">22nd International Conference on Logic for Programming Artificial Intelligence and Reasoning</a></span>
           (<abbr>LPAR</abbr>-22).
