--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">Contributed Talk</span>
+                <span class="rhs">
+                  <a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">
+                  PL&nbsp;Day&nbsp;’18
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
                   <a href="http://easychair.org/smart-program/LPAR-22/">
