--- a/cv.html
+++ b/cv.html
@@ -740,9 +740,21 @@ New York, <abbr>NY</abbr> 10165<br>
       <h2>Software</h2>
         <div class="item">
           <span class="article-title"><a href="https://github.com/smackers/smack"><abbr>SMACK</abbr></a></span>,
-          <abbr>SV-COMP&nbsp;’15</abbr> award-winning bounded software verifier for C programs.
+          <abbr>SV-COMP</abbr> award-winning bounded software verifier for C programs.
 
           <span class="print-only"><a href="https://github.com/smackers/smack">https://github.com/smackers/smack</a></span>
+        </div>
+        <div class="item">
+          <span class="article-title"><a href="https://github.com/imdea-software/verifying-constant-time">ct-verif</a></span>,
+          a tool for verifying constant time implementations, and a case study of verified constant-time implementations.
+
+          <span class="print-only"><a href="https://github.com/imdea-software/verifying-constant-time">https://github.com/imdea-software/verifying-constant-time</a></span>
+        </div>
+        <div class="item">
+          <span class="article-title"><a href="https://github.com/michael-emmi/violat">Violat</a></span>,
+          discovers simple test harnesses which demonstrate violations to atomicity — and weak-consistency — of Java concurrent data structures.
+
+          <span class="print-only"><a href="https://github.com/michael-emmi/violat">https://github.com/michael-emmi/violat</a></span>
         </div>
         <div class="item">
           <span class="article-title"><a href="https://github.com/imdea-software/violin">Violin</a></span>,
@@ -757,16 +769,22 @@ New York, <abbr>NY</abbr> 10165<br>
           <span class="print-only"><a href="https://github.com/michael-emmi/bam-bam-boogieman">https://github.com/michael-emmi/bam-bam-boogieman</a></span>
         </div>
         <div class="item">
+          <span class="article-title"><a href="https://github.com/michael-emmi/bibly">Bibly</a></span>,
+          simplifies the creation and maintenance of bibliographies in LaTeX documents by fetching the BibTex entries corresponding to LaTeX citations.
+
+          <span class="print-only"><a href="https://github.com/michael-emmi/bibly">https://github.com/michael-emmi/bibly</a></span>
+        </div>
+        <div class="item">
           <span class="article-title"><a href="https://github.com/michael-emmi/whittle">Whittle</a></span>,
           Minimizes input files via “delta debugging” by repeatedly “whittling” down features while maintaining validity.
 
           <span class="print-only"><a href="https://github.com/michael-emmi/whittle">https://github.com/michael-emmi/whittle</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="https://github.com/michael-emmi/printlncs">printlncs</a></span>,
-          save paper by printing every two pages of <abbr>LNCS</abbr> proceedings on a single page, without scaling.
+          <span class="article-title"><a href="https://github.com/michael-emmi/2up">2up</a></span>,
+          save paper by printing every two pages on a single page.
 
-          <span class="print-only"><a href="https://github.com/michael-emmi/printlncs">https://github.com/michael-emmi/printlncs</a></span>
+          <span class="print-only"><a href="https://github.com/michael-emmi/2up">https://github.com/michael-emmi/2up</a></span>
         </div>
     </section>
 
