--- a/index.html
+++ b/index.html
@@ -690,7 +690,25 @@
                   <a href="https://github.com/smackers/smack"><abbr>SMACK</abbr></a>
                 </span>
               </div>
-              <div class="info"><abbr>SV-COMP&nbsp;’15</abbr> award-winning bounded software verifier for C programs.
+              <div class="info"><abbr>SV-COMP</abbr> award-winning bounded software verifier for C programs.
+</div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                  <a href="https://github.com/imdea-software/verifying-constant-time">ct-verif</a>
+                </span>
+              </div>
+              <div class="info">a tool for verifying constant time implementations, and a case study of verified constant-time implementations.
+</div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                  <a href="https://github.com/michael-emmi/violat">Violat</a>
+                </span>
+              </div>
+              <div class="info">discovers simple test harnesses which demonstrate violations to atomicity — and weak-consistency — of Java concurrent data structures.
 </div>
             </div>
             <div class="item">
@@ -714,6 +732,15 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                  <a href="https://github.com/michael-emmi/bibly">Bibly</a>
+                </span>
+              </div>
+              <div class="info">simplifies the creation and maintenance of bibliographies in LaTeX documents by fetching the BibTex entries corresponding to LaTeX citations.
+</div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                   <a href="https://github.com/michael-emmi/whittle">Whittle</a>
                 </span>
               </div>
@@ -723,10 +750,10 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                  <a href="https://github.com/michael-emmi/printlncs">printlncs</a>
+                  <a href="https://github.com/michael-emmi/2up">2up</a>
                 </span>
               </div>
-              <div class="info">save paper by printing every two pages of <abbr>LNCS</abbr> proceedings on a single page, without scaling.
+              <div class="info">save paper by printing every two pages on a single page.
 </div>
             </div>
         </section>
