Added Gabriela as collaborator.

--- a/cv.html
+++ b/cv.html
@@ -702,6 +702,7 @@ New York, <abbr>NY</abbr> 10165<br>
           <span><strong>Ahmed Bouajjani</strong> (Paris 7)</span>
           <span><strong>Montgomery Carter</strong> (University of Utah)</span>
           <span><strong>Juan Chen</strong> (<abbr>MSR</abbr>)</span>
+          <span><strong>Gabriela Ciocarlie</strong> (SRI International)</span>
           <span><strong>Derrick Coetzee</strong> (<abbr>MSR</abbr>)</span>
           <span><strong>Jeremy Condit</strong> (<abbr>MSR</abbr>)</span>
           <span><strong>François Dupressoir</strong> (<abbr>IMDEA</abbr> Software)</span>
