Added DSV workshop.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -114,24 +114,24 @@ New York, <abbr>NY</abbr> 10165<br>
     <section id="references">
       <h2>References</h2>
         <div class="item">
-          <span class="article-title"><a href="http://www.liafa.jussieu.fr/~abou/">Ahmed Bouajjani</a></span>. Professor, Paris 7.
-          <span class="print-only"><a href="mailto:abou@liafa.univ-paris-diderot.fr">abou@liafa.univ-paris-diderot.fr</a></span>
+          <span class="article-title"><a href="https://www.irif.fr/~abou//">Ahmed Bouajjani</a></span>. Professor, Université Paris Diderot.
+          <span class="print-only"><a href="mailto:abou@irif.fr">abou@irif.fr</a></span>
         </div>
         <div class="item">
           <span class="article-title"><a href="http://www.mpi-sws.org/~rupak/">Rupak Majumdar</a></span>. Scientific Director, <abbr>MPI-SWS</abbr>.
           <span class="print-only"><a href="mailto:rupak@mpi-sws.org">rupak@mpi-sws.org</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/qadeer/">Shaz Qadeer</a></span>. Principal Researcher, Microsoft Research.
-          <span class="print-only"><a href="mailto:qadeer@microsoft.com">qadeer@microsoft.com</a></span>
+          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/qadeer/">Shaz Qadeer</a></span>. Research Scientist, Facebook Research.
+          
         </div>
         <div class="item">
           <span class="article-title"><a href="http://ti.arc.nasa.gov/profile/dimitra/">Dimitra Giannakopoulou</a></span>. Research Computer Scientist, <abbr>NASA</abbr> Ames Research Center.
           <span class="print-only"><a href="mailto:Dimitra.Giannakopoulou@nasa.gov">Dimitra.Giannakopoulou@nasa.gov</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/jjb/">Josh Berdine</a></span>. Researcher, Microsoft Research.
-          <span class="print-only"><a href="mailto:jjb@microsoft.com">jjb@microsoft.com</a></span>
+          <span class="article-title"><a href="https://research.fb.com/people/berdine-josh/">Josh Berdine</a></span>. Software Engineer, Facebook Research.
+          
         </div>
     </section>
 
@@ -146,6 +146,11 @@ New York, <abbr>NY</abbr> 10165<br>
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://popl19.sigplan.org">46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</a></span>
           (<abbr>POPL</abbr>&nbsp;’19).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Chair</span>.
+          <span class="article-volume"><a href="">Workshop on Democratizing Software Verification</a></span>
+          (<abbr>DSV</abbr>&nbsp;’19).
         </div>
         <div class="item">
           <span class="article-title">Contributed Talk</span>.
