--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">Program Chair</span>
+                <span class="rhs">
+                  
+                  <abbr>DSV</abbr>&nbsp;’19
+                  
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Contributed Talk</span>
                 <span class="rhs">
                   <a href="https://researcher.watson.ibm.com/researcher/view_group_subpage.php?id=9578">
