--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
               <div class="head">
                 <span class="lhs">Program Chair</span>
                 <span class="rhs">
-                  
+                  <a href="https://smackers.github.io/democratizing-software-verification-workshop-2019/">
                   <abbr>DSV</abbr>&nbsp;’19
-                  
+                  </a>
                 </span>
               </div>
             </div>
