Added link to new paper.

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Weak-Consistency Specification via Visibility Relaxation</a>
+                    <a href="papers/conf-popl-EmmiE19.pdf">Weak-Consistency Specification via Visibility Relaxation</a>
                 </span>
                 <span class="rhs"><abbr>POPL</abbr>&nbsp;’19</span>
               </div>
