--- a/publications.html
+++ b/publications.html
@@ -46,12 +46,12 @@
           <li class="item">
             Michael Emmi and Constantin Enea.
             <span class="article-title">
-                Weak-Consistency Specification via Visibility Relaxation.
+                <a href="https://dl.acm.org/citation.cfm?id=3290373">Weak-Consistency Specification via Visibility Relaxation</a>.
             </span>
             In <span class="article-volume">Proc. 46th <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> Symposium on Principles of Programming Languages</span>
-            (<abbr>POPL</abbr>&nbsp;’19).
+            (<abbr>POPL</abbr>&nbsp;’19), pages 60:1–60:28.
             <abbr>ACM</abbr>, 2019.
-            
+            <span class="screen-only">(<a href="papers/conf-popl-EmmiE19.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
           <li class="item">
             Konstantinos Athanasiou, Byron Cook, Michael Emmi, Colm MacCarthaigh, Daniel Schwartz-Narbonne and Serdar Tasiran.
