Added vstte paper.

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>SideTrail: Verifying Time-Balancing of Cryptosystems</a>
+                    <a href="papers/conf-vstte-AthanasiouCEMST18.pdf">SideTrail: Verifying Time-Balancing of Cryptosystems</a>
                 </span>
                 <span class="rhs"><abbr>VSTTE</abbr>&nbsp;’18</span>
               </div>
