--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,7 @@
             In <span class="article-volume">Proc. 10th Working Conference on Verified Software: Theories, Tools, and Experiments</span>
             (<abbr>VSTTE</abbr>&nbsp;’18), <abbr>LNCS</abbr>, volume 11294, pages 215–228.
             Springer, 2018.
-            
+            <span class="screen-only">(<a href="papers/conf-vstte-AthanasiouCEMST18.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
           <li class="item">
             Michael Emmi and Constantin Enea.
