--- a/cv.html
+++ b/cv.html
@@ -324,7 +324,7 @@ New York, <abbr>NY</abbr> 10165<br>
             In <span class="article-volume">Proc. 10th Working Conference on Verified Software: Theories, Tools, and Experiments</span>
             (<abbr>VSTTE</abbr>&nbsp;’18), <abbr>LNCS</abbr>, volume 11294, pages 215–228.
             Springer, 2018.
-          
+          <span class="screen-only">(<a href="papers/conf-vstte-AthanasiouCEMST18.pdf"><abbr>PDF</abbr></a>)</span>
         </div>
         <div class="item">
           Michael Emmi and Constantin Enea.
