Added Google Scholar link.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <div class="tagline">Researcher / <abbr>SRI</abbr> International</div>
           <div class="item">
               <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
+              <span class="tag"><a href="https://scholar.google.com/citations?user=fOxqIXYAAAAJ">@Google Scholar</a></span>
               <span class="tag"><a href="https://github.com/michael-emmi">@GitHub</a></span>
               <span class="tag"><a href="cv.html">@CV</a></span>
           </div>
