--- a/index.html
+++ b/index.html
@@ -158,6 +158,16 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">Review Panelist</span>
+                <span class="rhs">
+                  <a href="https://www.nsf.gov">
+                  <abbr>NSF</abbr>&nbsp;‘17
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
                   <a href="http://cs.nyu.edu/acsys/tapas2017/">
